--- a/src/.env
+++ b/src/.env
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
+DB_USERNAME=laravel
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
