--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -15,6 +15,8 @@ jobs:
             echo "mysqlの起動を待っています"
             sleep 1
           done
-          cp src/.env.example src/.env
+          # cp src/.env.example src/.env
           docker-compose exec -T app composer install
-          docker-compose exec -T app php artisan key:generate
+          # docker-compose exec -T app php artisan key:generate
+          docker-compose exec -T app php artisan migrate:refresh --seed
+          docker-compose exec -T app ./vendor/bin/phpunit
